--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,5 +1,11 @@
 {
   "extends": "./tsconfig.base.json",
+  "compilerOptions": {
+    "types": [
+      // dependencies
+      "webrtc"
+    ]
+  },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
