--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "@types/webrtc": "^0.0.25",
     "eventemitter3": "^3.1.2",
+    "mock-socket": "8.0.5",
     "opencollective": "^1.0.3",
     "opencollective-postinstall": "^2.0.0",
     "peerjs-js-binarypack": "1.0.1",
