--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "@types/webrtc": "^0.0.25",
+    "core-js": "^3.6.5",
     "eventemitter3": "^3.1.2",
     "mock-socket": "8.0.5",
     "opencollective": "^1.0.3",
