--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "types": [
+      // test
+      "jest",
       // dependencies
       "webrtc"
     ]
